--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,12 @@ plugins {
 }
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 30
 
     defaultConfig {
         applicationId "com.example.abir.composer"
         minSdkVersion 21
-        targetSdkVersion 29
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
 
@@ -35,22 +35,40 @@ android {
     }
 
     composeOptions {
-        kotlinCompilerVersion "1.3.70-dev-withExperimentalGoogleExtensions-20200424"
-        kotlinCompilerExtensionVersion = "0.1.0-dev13"
+        kotlinCompilerExtensionVersion '1.0.0-beta07'
     }
 }
 
 dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.0'
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'com.google.android.material:material:1.1.0'
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.0-alpha03"
-    implementation 'androidx.ui:ui-layout:0.1.0-dev13'
-    implementation 'androidx.ui:ui-material:0.1.0-dev13'
-    implementation 'androidx.ui:ui-tooling:0.1.0-dev13'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'androidx.core:core-ktx:1.5.0'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'com.google.android.material:material:1.3.0'
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0-alpha01"
+
+    implementation 'androidx.compose.ui:ui:1.0.0-beta07'
+    // Tooling support (Previews, etc.)
+    implementation 'androidx.compose.ui:ui-tooling:1.0.0-beta07'
+    // Foundation (Border, Background, Box, Image, Scroll, shapes, animations, etc.)
+    implementation 'androidx.compose.foundation:foundation:1.0.0-beta07'
+    // Material Design
+    implementation 'androidx.compose.material:material:1.0.0-beta07'
+    // Material design icons
+    implementation 'androidx.compose.material:material-icons-core:1.0.0-beta07'
+    implementation 'androidx.compose.material:material-icons-extended:1.0.0-beta07'
+    // Integration with activities
+    implementation 'androidx.activity:activity-compose:1.3.0-alpha08'
+    // Integration with ViewModels
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha05'
+    // Integration with observables
+    implementation 'androidx.compose.runtime:runtime-livedata:1.0.0-beta07'
+    implementation 'androidx.compose.runtime:runtime-rxjava2:1.0.0-beta07'
+
+    // UI Tests
+    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.0.0-beta07'
+
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
