--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,9 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        vectorDrawables {
+            useSupportLibrary true
+        }
     }
 
     buildTypes {
@@ -29,6 +32,7 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
+        useIR = true
     }
     buildFeatures {
         compose true
@@ -36,6 +40,7 @@ android {
 
     composeOptions {
         kotlinCompilerExtensionVersion '1.0.0-beta07'
+        kotlinCompilerVersion '1.4.32'
     }
 }
 
@@ -47,26 +52,28 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0-alpha01"
 
-    implementation 'androidx.compose.ui:ui:1.0.0-beta07'
+    implementation "androidx.compose.ui:ui:$compose_version"
     // Tooling support (Previews, etc.)
-    implementation 'androidx.compose.ui:ui-tooling:1.0.0-beta07'
+    implementation "androidx.compose.ui:ui-tooling:$compose_version"
     // Foundation (Border, Background, Box, Image, Scroll, shapes, animations, etc.)
-    implementation 'androidx.compose.foundation:foundation:1.0.0-beta07'
+    implementation "androidx.compose.foundation:foundation:$compose_version"
     // Material Design
-    implementation 'androidx.compose.material:material:1.0.0-beta07'
+    implementation "androidx.compose.material:material:$compose_version"
     // Material design icons
-    implementation 'androidx.compose.material:material-icons-core:1.0.0-beta07'
-    implementation 'androidx.compose.material:material-icons-extended:1.0.0-beta07'
-    // Integration with activities
-    implementation 'androidx.activity:activity-compose:1.3.0-alpha08'
-    // Integration with ViewModels
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha05'
+    implementation "androidx.compose.material:material-icons-core:$compose_version"
+    implementation "androidx.compose.material:material-icons-extended:$compose_version"
     // Integration with observables
-    implementation 'androidx.compose.runtime:runtime-livedata:1.0.0-beta07'
-    implementation 'androidx.compose.runtime:runtime-rxjava2:1.0.0-beta07'
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+    implementation "androidx.compose.runtime:runtime-rxjava2:$compose_version"
+    // Integration with activities
+    implementation 'androidx.activity:activity-compose:1.3.0-beta01'
+    // Integration with Constraint Layout
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-alpha07"
+    // Integration with ViewModels
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha06'
 
     // UI Tests
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.0.0-beta07'
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
