Staggered Grid [Complex Layout Implementation]

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.abir.composer">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -12,6 +12,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Composer">
         <activity
+            android:name=".code_lab_layouts_in_jetpack_compose.ComplexLayoutActivity"
+            android:exported="true"
+            android:label="@string/title_activity_complex_layout"
+            android:theme="@style/Theme.Composer.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".code_lab_layouts_in_jetpack_compose.ListPreviewActivity"
             android:exported="true"
             android:label="@string/title_activity_list_preview"
@@ -19,7 +30,7 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
         <activity
